# FaceRender

./: .gitignore  CMakeLists.txt  README.md  depvars.h  imgui.ini
cmake/: FindGLM.cmake  FindGLM_err.cmake
docs/: Doxyfile.in  front_page.md
includes/: extenso.h  stb_image_write.h
includes/ind/: loaders.cc  renderer.h  shader.cc  view.h  window.cc  window.h
includes/ind/effects/: congo.h
mythirds/glad/include/include/glad/: glad.h
mythirds/glad/src/: glad.c
renderer_hm/: CMakeLists.txt  face.cc  main.cc
